# comfyui-mcp-server

./: .gitignore  Dockerfile.http  Dockerfile.sse  Dockerfile.stdio  env.example  pyproject.toml  requirements.txt
src/: .env  server.py
src/client/: comfyui.py
workflows/: edit_image.json  test.json  text_to_image.json  text_to_image_placeholder.json  text_to_image_zimage.json  text_to_model_hunyuan2.1.json
