[project]
name = "comfyui-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "websocket-client>=1.8.0",
]
